force-app/main/default/objects/Contact/fields/Comunas__c.field-meta.xml
<CustomField>
    <fullName>Comunas__c</fullName>
    <label>Comunas</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Provincias__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Algarrobo</fullName>
            </value>
            <value>
                <fullName>Alhué</fullName>
            </value>
            <value>
                <fullName>Alto Biobío</fullName>
            </value>
            <value>
                <fullName>Alto del Carmen</fullName>
            </value>
            <value>
                <fullName>Alto Hospicio</fullName>
            </value>
            <value>
                <fullName>Ancud</fullName>
            </value>
            <value>
                <fullName>Andacollo</fullName>
            </value>
            <value>
                <fullName>Angol</fullName>
            </value>
            <value>
                <fullName>Antofagasta</fullName>
            </value>
            <value>
                <fullName>Antuco</fullName>
            </value>
            <value>
                <fullName>Antártica</fullName>
            </value>
            <value>
                <fullName>Arauco</fullName>
            </value>
            <value>
                <fullName>Arica</fullName>
            </value>
            <value>
                <fullName>Aysén</fullName>
            </value>
            <value>
                <fullName>Buin</fullName>
            </value>
            <value>
                <fullName>Bulnes</fullName>
            </value>
            <value>
                <fullName>Cabildo</fullName>
            </value>
            <value>
                <fullName>Cabo de Hornos</fullName>
            </value>
            <value>
                <fullName>Cabrero</fullName>
            </value>
            <value>
                <fullName>Calama</fullName>
            </value>
            <value>
                <fullName>Calbuco</fullName>
            </value>
            <value>
                <fullName>Caldera</fullName>
            </value>
            <value>
                <fullName>Calera de Tango</fullName>
            </value>
            <value>
                <fullName>Calle Larga</fullName>
            </value>
            <value>
                <fullName>Camarones</fullName>
            </value>
            <value>
                <fullName>Camiña</fullName>
            </value>
            <value>
                <fullName>Canela</fullName>
            </value>
            <value>
                <fullName>Carahue</fullName>
            </value>
            <value>
                <fullName>Cartagena</fullName>
            </value>
            <value>
                <fullName>Casablanca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>