force-app/main/default/objects/Contact/fields/Contact_High_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Contact_High_Confidence__c</fullName>
    <description>MIS-3139
Contact Status: not equal to “unqualified”
AND
Not at Company Flag not equal to Not at company
AND
created date: last 18 months</description>
    <formula>TEXT(Status__c) &lt;&gt; &apos;Unqualified&apos;
&amp;&amp;
TEXT(LID__No_longer_at_Company__c) &lt;&gt; &apos;Not at Company&apos;
&amp;&amp;
DATEVALUE( CreatedDate ) &gt;= DATE(YEAR(TODAY()) -1, MONTH(TODAY()) - 6, DAY(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact High Confidence</label>
    <type>Checkbox</type>
</CustomField>