force-app/main/default/objects/Contact/fields/Contact_Owner_Equals_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Equals_Account_Owner__c</fullName>
    <formula>If(OwnerId=Account.OwnerId,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Equals Account Owner</label>
    <type>Checkbox</type>
</CustomField>