force-app/main/default/objects/Contact/fields/Contact_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Manager__c</fullName>
    <formula>Owner.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Manager</label>
    <type>Text</type>
</CustomField>