force-app/main/default/objects/Contact/fields/Contact_Owner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Manager_Email__c</fullName>
    <label>Contact Owner Manager Email</label>
    <type>Email</type>
</CustomField>