force-app/main/default/objects/Contact/fields/Contact_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Name__c</fullName>
    <description>For Zendesk Display</description>
    <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
    <label>Contact Owner Name</label>
    <type>Text</type>
</CustomField>