force-app/main/default/objects/Contact/fields/Contact_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Title__c</fullName>
    <description>For Zendesk Display</description>
    <formula>Owner.Title</formula>
    <label>Contact Owner Title</label>
    <type>Text</type>
</CustomField>