force-app/main/default/objects/Contact/fields/Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationship__c</fullName>
    <label>Contact Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong - Could call / text and the contact would respond</fullName>
            </value>
            <value>
                <fullName>Medium - Would join a call if I put something on the calendar</fullName>
            </value>
            <value>
                <fullName>Weak - No relationship / Bad Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>