force-app/main/default/objects/Contact/fields/Contact_Us_Help_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Help_Timestamp__c</fullName>
    <label>Contact Us Help Timestamp</label>
    <type>DateTime</type>
</CustomField>