force-app/main/default/objects/Contact/fields/Contact_Us_Subject_Help__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Subject_Help__c</fullName>
    <label>Contact Us Subject Help</label>
    <length>900</length>
    <type>LongTextArea</type>
</CustomField>