force-app/main/default/objects/Contact/fields/ContactUs_Submission_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ContactUs_Submission_DateTime__c</fullName>
    <label>ContactUs Submission DateTime</label>
    <type>DateTime</type>
</CustomField>