force-app/main/default/objects/Contact/fields/Converted_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_ID__c</fullName>
    <label>Converted Lead  ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>