force-app/main/default/objects/Contact/fields/Country_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Country_Confidence__c</fullName>
    <description>MIS-4622</description>
    <formula>Account.Country_Confidence__c</formula>
    <label>Country Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>