force-app/main/default/objects/Contact/fields/Country_Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Country_Original_Source__c</fullName>
    <label>Country Original Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>