force-app/main/default/objects/Contact/fields/CTA_Description__c.field-meta.xml
<CustomField>
    <fullName>CTA_Description__c</fullName>
    <label>CTA Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>