force-app/main/default/objects/Contact/fields/CU_reassignment_notes__c.field-meta.xml
<CustomField>
    <fullName>CU_reassignment_notes__c</fullName>
    <label>CU reassignment notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>