force-app/main/default/objects/Contact/fields/Current_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Registration_Type__c</fullName>
    <description>Populated by Pardot</description>
    <label>Current Registration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>