force-app/main/default/objects/Contact/fields/Custom_Categories_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Categories_Last_Used_Date__c</fullName>
    <label>Custom Categories Last Used Date Old</label>
    <type>DateTime</type>
</CustomField>