force-app/main/default/objects/Contact/fields/Custom_Dashboards_First_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dashboards_First_Created_Date__c</fullName>
    <label>Custom Dashboards First Created Date Old</label>
    <type>DateTime</type>
</CustomField>