force-app/main/default/objects/Contact/fields/Custom_Dashboards_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dashboards_Last_Used_Date__c</fullName>
    <label>Custom Dashboards Last Used Date Old</label>
    <type>DateTime</type>
</CustomField>