force-app/main/default/objects/Contact/fields/Custom_Keyword_Groups__c.field-meta.xml
<CustomField>
    <fullName>Custom_Keyword_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Custom Keyword Groups</inlineHelpText>
    <label>KG Old field</label>
    <type>Checkbox</type>
</CustomField>