force-app/main/default/objects/Contact/fields/Custom_Keyword_Groups_First_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Keyword_Groups_First_Created_Date__c</fullName>
    <label>Custom Keyword Groups First Created Old</label>
    <type>DateTime</type>
</CustomField>