force-app/main/default/objects/Contact/fields/CustomCategories__c.field-meta.xml
<CustomField>
    <fullName>CustomCategories__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Custom Categories</inlineHelpText>
    <label>CC Old field</label>
    <type>Checkbox</type>
</CustomField>