force-app/main/default/objects/Contact/fields/CustomDashboards__c.field-meta.xml
<CustomField>
    <fullName>CustomDashboards__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Custom Dashboards</inlineHelpText>
    <label>CD Old field</label>
    <type>Checkbox</type>
</CustomField>