force-app/main/default/objects/Contact/fields/DataFox_Company_ID_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>DataFox_Company_ID_TimeStamp__c</fullName>
    <label>DataFox Company ID TimeStamp</label>
    <type>DateTime</type>
</CustomField>