force-app/main/default/objects/Contact/fields/Days_In_Trial__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Trial__c</fullName>
    <description>MIS-827 Sync with Pardot</description>
    <formula>Account.Days_In_Trial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Trial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>