force-app/main/default/objects/Contact/fields/Days_Since_Contact_Creation__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Contact_Creation__c</fullName>
    <description>MIS-5558</description>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Contact Creation</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>