force-app/main/default/objects/Contact/fields/Deal_Reg_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Status__c</fullName>
    <label>Deal Reg Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Private Email/Country is missing</fullName>
            </value>
            <value>
                <fullName>Owned by a Different Rep</fullName>
            </value>
            <value>
                <fullName>Rejected - Big 6 / Strategic</fullName>
            </value>
            <value>
                <fullName>Rejected - Existing Sales Process</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>