force-app/main/default/objects/Contact/fields/Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Registration</label>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>