force-app/main/default/objects/Contact/fields/Department_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Department_Calculated__c</fullName>
    <description>MIS-4320</description>
    <formula>BI_Data__r.Department_Calculated__c</formula>
    <label>Department - Calculated</label>
    <type>Text</type>
</CustomField>