force-app/main/default/objects/Contact/fields/Department_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Department_Other_Description__c</fullName>
    <label>Department Other Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>