force-app/main/default/objects/Contact/fields/Department_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Department_Prediction__c</fullName>
    <description>MIS-4488</description>
    <formula>BI_Data__r.Department_Prediction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Prediction</label>
    <type>Text</type>
</CustomField>