force-app/main/default/objects/Contact/fields/Department_registration__c.field-meta.xml
<CustomField>
    <fullName>Department_registration__c</fullName>
    <label>Department (registration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>