force-app/main/default/objects/Contact/fields/Deprioritized_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deprioritized_Reason__c</fullName>
    <description>MIS-4660</description>
    <label>Deprioritized Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Industry</fullName>
            </value>
            <value>
                <fullName>Bad Persona</fullName>
            </value>
            <value>
                <fullName>No Traffic</fullName>
            </value>
            <value>
                <fullName>No website/LinkedIn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>