force-app/main/default/objects/Contact/fields/DF_Total_Funding__c.field-meta.xml
<CustomField>
    <fullName>DF_Total_Funding__c</fullName>
    <label>DF Total Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>