force-app/main/default/objects/Contact/fields/Director_Manager_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Director_Manager_s_Email__c</fullName>
    <label>Director Manager&apos;s Email</label>
    <type>Email</type>
</CustomField>