force-app/main/default/objects/Contact/fields/Downloaded_PDF__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downloaded PDF</label>
    <type>Checkbox</type>
</CustomField>