force-app/main/default/objects/Contact/fields/Early_Detection__c.field-meta.xml
<CustomField>
    <fullName>Early_Detection__c</fullName>
    <label>Early Detection</label>
    <length>200</length>
    <type>Text</type>
</CustomField>