force-app/main/default/objects/Contact/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-4112</description>
    <label>Economic Buyer</label>
    <type>Checkbox</type>
</CustomField>