force-app/main/default/objects/Contact/fields/Email_Address_Domain_Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_Domain_Type_Details__c</fullName>
    <description>MIS-3449</description>
    <label>Email Address Domain Type Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>