force-app/main/default/objects/Contact/fields/Email_Current_Source_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Email_Current_Source_Last_Updated__c</fullName>
    <label>Email Current Source Last Updated</label>
    <type>Date</type>
</CustomField>