force-app/main/default/objects/Contact/fields/Email_Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Email_Original_Source__c</fullName>
    <label>Email Original Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>