force-app/main/default/objects/Contact/fields/EmailBounce__c.field-meta.xml
<CustomField>
    <fullName>EmailBounce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-6755</description>
    <label>Email Bounce</label>
    <type>Checkbox</type>
</CustomField>