force-app/main/default/objects/Contact/fields/Employees_Max__c.field-meta.xml
<CustomField>
    <fullName>Employees_Max__c</fullName>
    <label>Employees Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>