force-app/main/default/objects/Contact/fields/Employees_Max_FR__c.field-meta.xml
<CustomField>
    <fullName>Employees_Max_FR__c</fullName>
    <description>MIS-158</description>
    <formula>Account.Employees_Max__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula from the Account</inlineHelpText>
    <label>Employees Max FR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>