force-app/main/default/objects/Contact/fields/Employees_Min__c.field-meta.xml
<CustomField>
    <fullName>Employees_Min__c</fullName>
    <label>Employees Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>