force-app/main/default/objects/Contact/fields/Engaged_Contact__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Contact__c</fullName>
    <description>mirroring the CB from &quot;BI Data&quot; to reflect if this Contact is considered &quot;Engaged&quot;.</description>
    <formula>BI_Data__r.Engaged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engaged Contact</label>
    <type>Checkbox</type>
</CustomField>