force-app/main/default/objects/Contact/fields/Enrichment_Source_Time__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Source_Time__c</fullName>
    <label>Enrichment Source Date/Time</label>
    <type>DateTime</type>
</CustomField>