force-app/main/default/objects/Contact/fields/Enrichment_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_timestamp__c</fullName>
    <description>This field&apos;s value is coming from Lead conversion.
On leads, used by LeadTriggerHandler, this field is populated when employees min/max is getting the S _connector values.</description>
    <label>EMP enriched by SW Connector</label>
    <type>DateTime</type>
</CustomField>