force-app/main/default/objects/Contact/fields/Facebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Name__c</fullName>
    <label>Facebook Name</label>
    <type>TextArea</type>
</CustomField>