force-app/main/default/objects/Contact/fields/Fake_Data__c.field-meta.xml
<CustomField>
    <fullName>Fake_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS_7697</description>
    <label>Fake Data</label>
    <type>Checkbox</type>
</CustomField>