force-app/main/default/objects/Contact/fields/First_A_C_Company_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_A_C_Company_Timestamp__c</fullName>
    <label>First A-C Company Timestamp</label>
    <type>DateTime</type>
</CustomField>