force-app/main/default/objects/Contact/fields/First_Activity__c.field-meta.xml
<CustomField>
    <fullName>First_Activity__c</fullName>
    <description>MIS-2421</description>
    <label>First Activity</label>
    <type>Date</type>
</CustomField>