force-app/main/default/objects/Contact/fields/First_Form_Complete_URL__c.field-meta.xml
<CustomField>
    <fullName>First_Form_Complete_URL__c</fullName>
    <description>Populated from the field &apos;Form_Complete_URL_c&apos;
MIS-2044</description>
    <label>First Form Complete URL</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>