force-app/main/default/objects/Contact/fields/First_Form_Location_Breadcrumb__c.field-meta.xml
<CustomField>
    <fullName>First_Form_Location_Breadcrumb__c</fullName>
    <label>First Form Location Breadcrumb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>