force-app/main/default/objects/Contact/fields/First_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Login_Date__c</fullName>
    <formula>BI_Data__r.First_Login_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Login Date</label>
    <type>Date</type>
</CustomField>