force-app/main/default/objects/Contact/fields/First_Owner_Assigned__c.field-meta.xml
<CustomField>
    <fullName>First_Owner_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stating the first owner assigned only if profile = SW MIR, SW Sales Internal, SW Sales External, SW CSM, SW SDR, SW SDR Extended

MIS-2381</description>
    <label>First Owner Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts_First_Owner_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>