force-app/main/default/objects/Contact/fields/First_Pro_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pro_Purchase_Date__c</fullName>
    <description>MIS-816 Intercom Related field</description>
    <formula>Account.fr_First_Pro_Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Pro Purchase Date</label>
    <type>Date</type>
</CustomField>