force-app/main/default/objects/Contact/fields/First_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Date__c</fullName>
    <label>First Visit Date</label>
    <type>Date</type>
</CustomField>