force-app/main/default/objects/Contact/fields/First_Visit_Page_c__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Page_c__c</fullName>
    <label>First Visit Page</label>
    <type>Url</type>
</CustomField>