force-app/main/default/objects/Contact/fields/Fit_Score_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_2_Label__c</fullName>
    <formula>BI_Data__r.FIT_Label2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fit Score 2 Label</label>
    <type>Text</type>
</CustomField>