force-app/main/default/objects/Contact/fields/Fit_Score_Count__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_Count__c</fullName>
    <label>Fit Score Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>